--- a/hypeanimationswordpress-master/languages/hype-animations-fr_FR.po
+++ b/hypeanimationswordpress-master/languages/hype-animations-fr_FR.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Hype Animations\n"
 "POT-Creation-Date: 2016-03-26 10:10+0100\n"
-"PO-Revision-Date: 2016-03-26 10:14+0100\n"
+"PO-Revision-Date: 2017-09-05 14:42-0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr_FR\n"
@@ -10,7 +10,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Poedit 1.8.6\n"
+"X-Generator: Poedit 2.0.3\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-WPHeader: hypeanimations.php\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -89,11 +89,11 @@ msgstr "Supprimer"
 
 #: includes/adminpanel.php:378
 msgid "Updated !"
-msgstr "Mise à jour !"
+msgstr "Mise à jour!"
 
 #: includes/adminpanel.php:385
 msgid "Error, please try again !"
-msgstr "Erreur, veuillez réessayer !"
+msgstr "Erreur, veuillez réessayer!"
 
 #: includes/adminpanel.php:392
 msgid "Update file"
@@ -105,7 +105,7 @@ msgstr "Traitement en cours..."
 
 #: includes/adminpanel.php:405
 msgid "Search :"
-msgstr "Chercher :"
+msgstr "Chercher:"
 
 #: includes/adminpanel.php:406
 msgid "Show"
@@ -173,7 +173,7 @@ msgstr "Ou ajoutez en une nouvelle"
 
 #: includes/tinymcetool.php:80 includes/tinymcetool.php:95
 msgid "Drop .OAM file or click here to upload"
-msgstr "Déposez le fichier .OAM ou cliquez ici pour ajouter  votre animation"
+msgstr "Déposez le fichier .OAM ou cliquez ici pour ajouter votre animation"
 
 #: includes/tinymcetool.php:82
 msgid ""
@@ -192,7 +192,7 @@ msgstr "Insérez vos animations Hype"
 
 #. Author of the plugin/theme
 msgid "<a href=\"http://www.eralion.com\" target=\"_blank\">ERALION.com</a>"
-msgstr ""
+msgstr "<a href=\"http://www.eralion.com\" target=\"_blank\">ERALION.com</a>"
 
 #~ msgid "Import file"
 #~ msgstr "Importer le fichier"
