--- a/hypeanimationswordpress-master/languages/hype-animations.pot
+++ b/hypeanimationswordpress-master/languages/hype-animations.pot
@@ -3,14 +3,14 @@ msgid ""
 msgstr ""
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 "Project-Id-Version: Hype Animations\n"
-"POT-Creation-Date: 2016-03-26 10:05+0100\n"
+"POT-Creation-Date: 2017-09-05 14:43-0400\n"
 "PO-Revision-Date: 2016-03-23 04:00+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.6\n"
+"X-Generator: Poedit 2.0.3\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-WPHeader: hypeanimations.php\n"
 "X-Poedit-SourceCharset: UTF-8\n"
